src/modules/10-common/components/EntityReference/EntityReference.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.container {
  width: 770px;
  margin-top: var(--spacing-small) !important;
  .tabsContainer {
    padding-bottom: 12px;
    border-bottom: 1px solid var(--grey-200);

    .tabValue {
      max-width: 150px;
    }

    .tabIcon {
      > svg > path {
        fill: var(--grey-700);
      }
    }
    .searchBox {
      display: flex;
      .search {
        flex: 1;
        margin-bottom: unset;
        > div {
          > span {
            > svg {
              margin-top: 1px;
            }
          }
          > input {
            background-color: var(--grey-50) !important;
          }
        }
      }
    }

    .selectedCount {
      border-radius: var(--spacing-10);
      border: 0 !important;
    }

    :global {
      .bp3-tab-list {
        border-bottom: 1px solid var(--grey-200);
      }
      .bp3-tab-panel {
        width: 100%;
        height: 500px;
      }

      .bp3-tab:not([aria-disabled='true']):hover {
        :local(.selectedCount) {
          color: var(--white) !important;
          :global(.bp3-icon) {
            svg {
              path {
                fill: var(--white) !important;
              }
            }
          }
        }
      }
    }
  }
}

.tabTitleContainer {
  max-width: 110px !important;
  word-break: break-all !important;
}
.noDataContainer {
  height: 100% !important;
}
.noDataCardImg {
  height: 100% !important;
}

